@@ -1,4 +1,7 @@
 
+=== (next) ===
+FIXED: to use gen_params.bits for derivedKey()
+
 === 0.9.6 (2018-05-18) ===
 NEW: external key ID prefix for key listing
 NEW: upgraded to FTN13 v1.1
